Timeline automatically adds event listeners for Characters that need them.

--- a/times_polevault.html
+++ b/times_polevault.html
@@ -254,7 +254,7 @@
 <div id="interactiveFooter" class="opposingFloatControl wrap">
 <div class="metaData element1">
 <div class="module">
-<span class="byline">Design, art and programming by JAMES THOMAS, based on an original graphic by KURT SNIBBE/Orange County Register</span>
+<span class="byline">Pixels and programming by JAMES THOMAS, based on an original graphic by KURT SNIBBE/Orange County Register</span> <strong>This is just an example. It is not a nytimes.com graphic.</strong>
 <span class="noWrap refer feedback">
 <span class="pipe">|</span>
 
