--- a/times_polevault.html
+++ b/times_polevault.html
@@ -36,13 +36,6 @@
 <link rel="stylesheet" type="text/css" href="http://graphics8.nytimes.com/css/0.1/screen/build/interactive/styles.css">
 <link rel="stylesheet" type="text/css" media="print" href="http://graphics8.nytimes.com/css/0.1/print/styles.css">
 
-<!-- nyt typekit calls
-<script src="http://typeface.nytimes.com/svi2cbg.js" type="text/javascript"></script>
-<link rel="stylesheet" href="http://typeface.nytimes.com/k/svi2cbg-d.css?3bb2a6e53c9684ffdc9a9bf21f5b2a62e0aa097ce99d70af0d47c9d0f7c73e8558b71c4bb06fa61ce7050f463c74b58f89e2b72e33c69f17e5cc8680256000b457c71b8916c367e69e9d66357c9b2378667c1a0a4e7115f9f56e92970fe6fe53224b3788be27fa6466f93990b0b104c09cbcf32a8bfa31e1338a417be4f97a0a00e65330bed2a2cd417dbc3c24eae31682">
--->
-
-<script src="modernizr-2.0.6.js"></script>
-
 <!--[if IE]>
         <style type="text/css">
             @import url(http://graphics8.nytimes.com/css/0.1/screen/common/ie.css);
@@ -53,16 +46,6 @@
             @import url(http://graphics8.nytimes.com/css/0.1/screen/common/ie6.css);
         </style>
     <![endif]-->
-<script type="text/javascript" src="http://graphics8.nytimes.com/js/common.js"></script>
-<script type="text/javascript" src="http://graphics8.nytimes.com/js/common/screen/DropDown.js"></script>
-<script type="text/javascript" src="http://graphics8.nytimes.com/js/fileit.js"></script>
-<script type="text/javascript" src="http://graphics8.nytimes.com/js/util/tooltip.js"></script>
-<script type="text/JavaScript">
-        var static_kw = "";
-        var dynamic_kw = "Accidents+and+Safety;Oil+%28Petroleum%29+and+Gasoline;Offshore+Drilling+and+Exploration;BP+Plc;Gulf+of+Mexico";
-        var nyt_google_contents = dynamic_kw + static_kw;
-        var nyt_google_ad_channel = "us";
-    </script>
     
     <style type="text/css">
       .janky { font-family: nyt-cheltenham,sans-serif; }
@@ -171,21 +154,6 @@
 
 <div class="singleAd" id="TopAd">
 <!-- ADXINFO classification="leaderboard_728" campaign="Google_2011_ROS_LB"--><div class="clearfix">
-<script type="text/javascript" language="JavaScript">
-<!--
-	google_ad_client = 'ca-nytimes_display_html';
-	google_alternate_ad_url = 'http://www.nytimes.com/ads/remnant/networkredirect-leaderboard.html';
-	google_ad_width = 728; 
-	google_ad_height = 90;
-	google_ad_format = '728x90_pas_abgc';
-	google_ad_type = 'image,flash';
-	google_encoding = 'utf8'; 
-	google_safe = 'high';
-	google_targeting = 'site_content';
-	google_ad_channel = 'ROS_leaderboard';
-// -->
-</script>
-<script type="text/javascript" language="JavaScript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 
 <noscript>
 	<img height="1" width="1" border="0" src="http://pagead2.googlesyndication.com/pagead/imp.gif?client=ca-nytimes_display_html&event=noscript" /> 
@@ -254,7 +222,8 @@
 <div id="interactiveFooter" class="opposingFloatControl wrap">
 <div class="metaData element1">
 <div class="module">
-<span class="byline">Pixels and programming by JAMES THOMAS, based on an original graphic by KURT SNIBBE/Orange County Register</span> <strong>This is just an example. It is not a nytimes.com graphic.</strong>
+<span class="byline">Design, art and programming by JAMES THOMAS, based on an original graphic by KURT SNIBBE/Orange County Register</span>
+<br /> <strong>This is just an example. It is not a nytimes.com graphic.</strong>
 <span class="noWrap refer feedback">
 <span class="pipe">|</span>
 
