Created EventDispatcher and moved makeDispatchers() to it.

--- a/times_polevault.html
+++ b/times_polevault.html
@@ -222,8 +222,8 @@
 <div id="interactiveFooter" class="opposingFloatControl wrap">
 <div class="metaData element1">
 <div class="module">
-<span class="byline">Design, art and programming by JAMES THOMAS, based on an original graphic by KURT SNIBBE/Orange County Register</span>
-<br /> <strong>This is just an example. It is not a nytimes.com graphic.</strong>
+<span class="byline">Pixels and programming by JAMES THOMAS, based on an original graphic by KURT SNIBBE/Orange County Register</span>
+<br /> <strong>This is just an example of <a href="https://github.com/parisminton/chuck.js">chuck.js</a> at work. It is not a nytimes.com graphic.</strong>
 <span class="noWrap refer feedback">
 <span class="pipe">|</span>
 
